# n8n_automation_model

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_news.json
n8n/: README.md
n8n/workflows/: news-trend-predictor.json
scripts/: infer.py  run_pipeline.py  run_pipeline_json.py  train.py
src/news_trend_predictor/: __init__.py
src/news_trend_predictor/config/: settings.py
src/news_trend_predictor/data_ingestion/: __init__.py  client.py  dataset.py  schemas.py
src/news_trend_predictor/deployment/: __init__.py  service.py
src/news_trend_predictor/evaluation/: __init__.py  comparison.py  metrics.py
src/news_trend_predictor/features/: builder.py
src/news_trend_predictor/google_sheets/: __init__.py  client.py
src/news_trend_predictor/model_registry/: __init__.py  local.py
src/news_trend_predictor/notifications/: telegram.py
src/news_trend_predictor/pipeline/: __init__.py  orchestrator.py
src/news_trend_predictor/preprocessing/: __init__.py  text.py
src/news_trend_predictor/training/: __init__.py  trainer.py
tests/: test_deployment_logic.py  test_external_payload_pipeline.py  test_google_sheets_payload.py  test_metric_comparison.py  test_preprocessing.py
